packages/cjs-to-esm/test/snapshots/package-corpus/core-js/es/error/is-error.js
import "../../modules/es.object.create";
import "../../modules/es.error.is-error";
import path from "../../internals/path";
const _cjs_default = path.Error.isError;
export default _cjs_default;
